2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: fixed 'Bug 442768 -
	Should show fully qualified name in tooltip when namespaces clash'.

2008-11-10  Mike Krüger  <mike@icsharpcode.net>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	Added enable auto completion option.

2008-11-07  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs: Escape status bar text.

2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Add submenu on
	context menu for selecting input method. Seems be be the standard
	thing to do in GTK.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on code
	templates.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.SourceEditor/EditActions.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixes some bugs with
	code templates and auto insert brackets.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs:
	* MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs:
	* MonoDevelop.SourceEditor/CompileErrorTooltipProvider.cs: fixed 'Bug
	442099 - Empty code info tooltips should not be shown'.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Removed options which are not
	really contextual.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Add border around text
	editor to give it definition when UI and colours schemes are both
	light or dark.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>
